project2/test/test_11910934_2.out
Error type 6 at Line 8: left side in assignment is rvalue
Error type 1 at Line 5: undefined variable: t
Error type 7 at Line 10: unmatching operands
Error type 5 at Line 10: unmatching type on both sides of assignment
