project2/test/test_11910934_2.spl
int test_11910934_2()
{
  int x1 = 5;
  6 = x1;
  x1 = t +3;
  return 0;
}
